<resources>
    <string name="app_name">Cartera_v1</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="tv_billeteraIZQ">Billetera</string>
    <string name="hoy">Hoy</string>
    <string name="ayer">Ayer</string>
    <string name="et_nota">Escriba una nota</string>
    <string name="tv_agregarFoto">Selecciona una foto</string>
    <string name="tv_dialogo_billetera">Selecciona una billetera</string>
    <string name="cv_creacion_billetera">Crear una billetera</string>
    <string name="nombre_cartera_creacion_cartera">Introduzca un nombre a su billetera</string>
    <string name="balance_predeterminado_creacion_cartera">Introduzca el saldo inicial</string>
    <string name="btn_aceptar_nombre_vacio">Introduzca un nombre a la billetera</string>
    <string name="tv_dialogo_categoria">Selecciona una categoria</string>
    <string name="tv_creacion_categoria">Crear categoría</string>
    <string name="et_nueva_categoria">Nombre de la categoria</string>
    <string name="tv_colores_categoria_eleccion">Color de la categoria</string>
    <string name="tv_iconos_categoria_eleccion">Icono de categoria</string>
    <string name="tv_administrador_categorias">Categorias</string>
    <string name="balance_fragmento_movimientos">Flujo de fondos</string>
    <string name="ingreso">Ingreso</string>
    <string name="gasto">Gasto</string>
    <string name="radiobutton_ingreso">Ingreso</string>
    <string name="radiobutton_gasto">Gasto</string>
    <string name="radiobutton_transferencia">Transferencia</string>
    <string name="toast_falta_nombre_categoria">Introduzca un nombre a la categoria</string>
    <string name="toast_falta_color_categoria">Elige un color para la categoria</string>
    <string name="toast_falta_icono_categoria">Elige un icono para la categoria</string>
    <string name="toast_falta_tipo_categoria">Elige el tipo (gasto o ingreso) de la categoria</string>
    <string name="toast_falta_cartera">Elige una cartera o crea una nueva en la pestaña de billeteras</string>
    <string name="toast_falta_valor_transaccion">La transaccion no puede ser 0</string>
    <string name="toast_falta_seleccionar_categoria">Elige una categoria en el circulo de la parte superior izquierda</string>
    <string name="tv_creacion_meta">Elige el tipo de meta deseado</string>
    <string name="radiobutton_ahorro_meta">Balance ahorro</string>
    <string name="ahorro">Ahorro</string>
    <string name="et_nueva_meta">Objetivo</string>
    <string name="et_caracter_meta_especifico">Específico</string>
    <string name="tv_creacion_meta_spinner">Elige la categoria o en su defecto general</string>
    <string name="et_titulo_recordatorio">Introduce un título para el recodatorio</string>
    <string name="et_mensaje_recodatorio">Introduce un mensaje para el recordatorio</string>
    <string name="repeticion_recordatorio">Repetir</string>
    <string name="creacion_recordatorio">Agrega los detalles del recordatorio</string>
    <string name="repeticion_intervalo_recordatorio">Introduce un intervalo de repeticion</string>
    <string name="editar_recordatorio">Editar recordatorio</string>
    <string name="tv_dialogo_intervalo">Selecciona un intervalo para tu repeticion</string>
    <string name="todos_los_dias">Cada día</string>
    <string name="todos_las_semanas">Cada semana</string>
    <string name="cada_cuatro_semanas">Cada cuatro semanas</string>
    <string name="cada_año">Cada año</string>
    <string name="toast_falta_intervalo">Introduce un intervalo para la repeticion de la notificacion</string>
    <string name="toast_falta_titulo_recordatorio">Es obligatorio que el recordatorio tenga un titulo al menos</string>
    <string name="por_meses">Por meses</string>
    <string name="todas_las_billeteras">Todas las billeteras</string>
    <string name="por_año">Por años</string>
    <string name="usanzas_singular">transacción</string>
    <string name="usanzas_plural">transacciones</string>
    <string name="todo_el_historial">Historial completo</string>
    <string name="enero">Enero</string>
    <string name="febrero">Febrero</string>
    <string name="marzo">Marzo</string>
    <string name="abril">Abril</string>
    <string name="mayo">Mayo</string>
    <string name="junio">Junio</string>
    <string name="julio">Julio</string>
    <string name="agosto">Agosto</string>
    <string name="septiembre">Septiembre</string>
    <string name="octubre">Octubre</string>
    <string name="noviembre">Noviembre</string>
    <string name="diciembre">Diciembre</string>
    <string name="uso_singular">movimiento</string>
    <string name="uso_plural">movimientos</string>
    <string name="editar_categoria">Editar categoría</string>
    <string name="creacion_transaccion">Creación de transacción</string>
    <string name="editar_transaccion">Editar transacción</string>
    <string name="estas_seguro_de_borrar">¿Estás seguro de borrar la categoria?</string>
    <string name="estas_seguro_de_borrar_mensaje">Esto hará que todos tus movimientos con esta categoría se borren permanentemente</string>
    <string name="dark_mode_titulo">Tema oscuro</string>
    <string name="dark_mode">Tema oscuro</string>
    <string name="ajustes">Ajustes</string>
    <string name="sobre_mi">Sobre mi</string>
    <string name="idioma">Idioma</string>
    <string name="sobre_el_desarrollador">Sobre el desarrollador</string>


</resources>