<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.EstadisticasCartera">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="center|top"
        android:gravity="center"
        android:text="@string/balance_fragmento_movimientos"
        android:textSize="12sp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">
    <Button
        android:id="@+id/btn_org_billeteras_estadisticas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="15sp"
        android:backgroundTint="@color/transparent"
        android:drawableEnd="@drawable/outline_keyboard_arrow_down_24"
        android:text="@string/todas_las_billeteras"
        android:textColor="@color/black"
        android:textSize="8sp" />
    <Button
        android:id="@+id/btn_org_periodos_estadisticas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:drawableEnd="@drawable/outline_keyboard_arrow_down_24"
        android:textColor="@color/black"
        android:textSize="8sp"
        android:text="@string/todo_el_historial"/>


</LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    <Button
        android:id="@+id/btn_org_periodos_anios_estadisticas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:drawableEnd="@drawable/outline_keyboard_arrow_down_24"
        android:textColor="@color/black"
        android:textSize="8sp"
        android:layout_marginRight="15sp"
        />
    <Button
        android:id="@+id/btn_org_periodos_meses_estadisticas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:drawableEnd="@drawable/outline_keyboard_arrow_down_24"
        android:textColor="@color/black"
        android:textSize="8sp"
        />
</LinearLayout>

    <RadioGroup
        android:id="@+id/rg_categorias_estadisticas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_categoria_ingreso_estadisticas"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginLeft="30sp"
            android:checked="true"
            android:background="@drawable/custom_radio_selector"
            android:button="@color/transparent"
            android:text="@string/radiobutton_ingreso"
            android:textAlignment="center"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rb_categoria_gasto_estadisticas"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:background="@drawable/custom_radio_selector"
            android:button="@color/transparent"

            android:text="@string/radiobutton_gasto"
            android:textAlignment="center"
            android:textSize="12sp" />
    </RadioGroup>
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pc_ingreso_gasto_estadisticas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="0.5"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_categorias_estadisticas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"/>
</LinearLayout>