<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_marginTop="10sp"
        android:layout_marginBottom="5sp"
        android:layout_marginStart="15sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/tv_dialogo_categoria"
        android:layout_weight=".1"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_eleccion_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        app:fabCustomSize="44dp"
       android:src="@drawable/outline_settings_24"
        android:tint="@color/white"/>

</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioGroup
        android:id="@+id/rg_categorias"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:background="@drawable/custom_radio_selector"
            android:checked="true"
            android:id="@+id/rb_categoria_gasto"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:textSize="10sp"
            android:text="@string/radiobutton_gasto"
            android:textAlignment="center"
            android:button="@color/transparent"
            />
        <RadioButton
            android:background="@drawable/custom_radio_selector"
            android:textSize="10sp"
            android:text="@string/radiobutton_ingreso"
            android:id="@+id/rb_categoria_ingreso"

            android:layout_width="90dp"
            android:layout_height="35dp"
            android:textAlignment="center"
            android:button="@color/transparent"
            android:layout_marginRight="15sp"
            />
        <RadioButton
            android:layout_marginLeft="15dp"
            android:layout_marginRight="30dp"
            android:id="@+id/rb_categoria_transferencia"
            android:layout_width="90dp"
            android:textSize="10sp"
            android:layout_height="35dp"
            android:button="@color/transparent"
            android:background="@drawable/custom_radio_selector"
            android:text="@string/radiobutton_transferencia"
            android:textAlignment="center"/>
    </RadioGroup>
</LinearLayout>
    <View

        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="?android:attr/listDivider" />

    <TableLayout
        android:id="@+id/tl_dialogo_eleccion_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200sp"/>
</LinearLayout>