<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.CreacionRecordatorio">
<TextView
    android:id="@+id/tv_titulo_activity_recordatorio"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="25sp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_titulo_recordatorio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_titulo_recordatorio" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mensaje_recordatorio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/et_mensaje_recodatorio" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <DatePicker
            android:id="@+id/dp_recordatorio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_weight="1"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:scaleX=".7"
            android:scaleY=".7" />

        <TimePicker
            android:id="@+id/tp_recordatorio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".8"
            android:calendarViewShown="false"
            android:padding="10dp"
            android:scaleX=".7"
            android:scaleY=".7"
            android:timePickerMode="spinner" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_repeticion_info"
            android:drawableLeft="@drawable/outline_repeat_24"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/repeticion_recordatorio"
            android:layout_weight="1"/>
        <Switch
            android:id="@+id/switch_repeticion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

    </LinearLayout>
    <TextView
        android:id="@+id/tv_intervalo_recordatorio"
        android:drawableLeft="@drawable/outline_timer_24"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/repeticion_intervalo_recordatorio"
        />
    <Button
        android:id="@+id/btn_aceptar_recordatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="OK" />
</LinearLayout>